feat: search filters + ux improvements

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -525,7 +525,7 @@
   "admin.scheduler.waitUntil": "Start",
   "admin.search.configSaveSuccess": "Search engine configuration saved successfully.",
   "admin.search.dictOverrides": "PostgreSQL Dictionary Mapping Overrides",
-  "admin.search.dictOverridesHint": "One override per line, in the format: en=english",
+  "admin.search.dictOverridesHint": "JSON object of 2 letters locale codes and their PostgreSQL dictionary association. e.g. { \"en\": \"english\" }",
   "admin.search.engineConfig": "Engine Configuration",
   "admin.search.engineNoConfig": "This engine has no configuration options you can modify.",
   "admin.search.highlighting": "Enable Term Highlighting",
@@ -1757,9 +1757,13 @@
   "profile.title": "Profile",
   "profile.uploadNewAvatar": "Upload New Image",
   "profile.viewPublicProfile": "View Public Profile",
+  "search.filterLocaleDisplay": "Any locale | {n} locale only | {count} locales selected",
   "search.filters": "Filters",
   "search.results": "Search Results",
   "search.sortBy": "Sort By",
+  "search.sortByLastUpdated": "Last Updated",
+  "search.sortByRelevance": "Relevance",
+  "search.sortByTitle": "Title",
   "tags.clearSelection": "Clear Selection",
   "tags.currentSelection": "Current Selection",
   "tags.locale": "Locale",
