feat: rebuild search index + isSearchable flag

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -525,7 +525,7 @@
   "admin.scheduler.waitUntil": "Start",
   "admin.search.configSaveSuccess": "Search engine configuration saved successfully.",
   "admin.search.dictOverrides": "PostgreSQL Dictionary Mapping Overrides",
-  "admin.search.dictOverridesHint": "JSON object of 2 letters locale codes and their PostgreSQL dictionary association. e.g. { \"en\": \"english\" }",
+  "admin.search.dictOverridesHint": "JSON object of 2 letters locale codes and their PostgreSQL dictionary association. e.g. {0}",
   "admin.search.engineConfig": "Engine Configuration",
   "admin.search.engineNoConfig": "This engine has no configuration options you can modify.",
   "admin.search.highlighting": "Enable Term Highlighting",
@@ -533,10 +533,12 @@
   "admin.search.indexRebuildSuccess": "Index rebuilt successfully.",
   "admin.search.listRefreshSuccess": "List of search engines has been refreshed.",
   "admin.search.rebuildIndex": "Rebuild Index",
+  "admin.search.rebuildInitSuccess": "A search index rebuild has been initiated and will start shortly.",
   "admin.search.saveSuccess": "Search engine configuration saved successfully",
   "admin.search.searchEngine": "Search Engine",
   "admin.search.subtitle": "Configure the search capabilities of your wiki",
   "admin.search.title": "Search Engine",
+  "admin.searchRebuildIndex": "Rebuild Index",
   "admin.security.cors": "CORS (Cross-Origin Resource Sharing)",
   "admin.security.corsHostnames": "Hostnames Whitelist",
   "admin.security.corsHostnamesHint": "Enter one hostname per line",
@@ -1535,6 +1537,7 @@
   "editor.props.draftHint": "Visible to users with write access only.",
   "editor.props.icon": "Icon",
   "editor.props.info": "Info",
+  "editor.props.isSearchable": "Include in Search Results",
   "editor.props.jsLoad": "Javascript - On Load",
   "editor.props.jsLoadHint": "Execute javascript once the page is loaded",
   "editor.props.jsUnload": "Javascript - On Unload",
