feat: sidebar nav editor (wip)

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -1683,6 +1683,25 @@
   "history.restore.confirmText": "Are you sure you want to restore this page content as it was on {date}? This version will be copied on top of the current history. As such, newer versions will still be preserved.",
   "history.restore.confirmTitle": "Restore page version?",
   "history.restore.success": "Page version restored succesfully!",
+  "navEdit.editMenuItems": "Edit Menu Items",
+  "navEdit.header": "Header",
+  "navEdit.icon": "Icon",
+  "navEdit.iconHint": "Icon to display to the left of the menu item.",
+  "navEdit.label": "Label",
+  "navEdit.labelHint": "Text to display on the menu item.",
+  "navEdit.link": "Link",
+  "navEdit.nestItem": "Nest Item",
+  "navEdit.openInNewWindow": "Open in New Window",
+  "navEdit.openInNewWindowHint": "Whether the link should open in a new window / tab.",
+  "navEdit.separator": "Separator",
+  "navEdit.target": "Target",
+  "navEdit.targetHint": "Target path or external link to point to.",
+  "navEdit.title": "Edit Navigation",
+  "navEdit.unnestItem": "Unnest Item",
+  "navEdit.visibility": "Visibility",
+  "navEdit.visibilityAll": "Everyone",
+  "navEdit.visibilityHint": "Whether to show the menu item to everyone or just selected groups.",
+  "navEdit.visibilityLimited": "Selected Groups",
   "pageDeleteDialog.confirm": "Are you sure you want to delete the page {name}?",
   "pageDeleteDialog.deleteSuccess": "Page deleted successfully.",
   "pageDeleteDialog.pageId": "Page ID {id}",
