feat: remove localeCode ref + new nav items + fetch current

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -1683,7 +1683,9 @@
   "history.restore.confirmText": "Are you sure you want to restore this page content as it was on {date}? This version will be copied on top of the current history. As such, newer versions will still be preserved.",
   "history.restore.confirmTitle": "Restore page version?",
   "history.restore.success": "Page version restored succesfully!",
+  "navEdit.clearItems": "Clear All Items",
   "navEdit.editMenuItems": "Edit Menu Items",
+  "navEdit.emptyMenuText": "Click the Add button to add your first menu item.",
   "navEdit.header": "Header",
   "navEdit.icon": "Icon",
   "navEdit.iconHint": "Icon to display to the left of the menu item.",
@@ -1691,8 +1693,11 @@
   "navEdit.labelHint": "Text to display on the menu item.",
   "navEdit.link": "Link",
   "navEdit.nestItem": "Nest Item",
+  "navEdit.nestingWarn": "The previous menu item must be a normal link or another nested link. Invalid nested items will be shown in red.",
+  "navEdit.noSelection": "Select a menu item from the left to start editing.",
   "navEdit.openInNewWindow": "Open in New Window",
   "navEdit.openInNewWindowHint": "Whether the link should open in a new window / tab.",
+  "navEdit.selectGroups": "Group(s):",
   "navEdit.separator": "Separator",
   "navEdit.target": "Target",
   "navEdit.targetHint": "Target path or external link to point to.",
