feat: edit navigation

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -204,6 +204,8 @@
   "admin.flags.title": "Flags",
   "admin.flags.warn.hint": "Doing so may result in data loss, performance issues or a broken installation!",
   "admin.flags.warn.label": "Do NOT enable these flags unless you know what you're doing!",
+  "admin.general.allowBrowse": "Allow Browsing",
+  "admin.general.allowBrowseHint": "Can users browse using the tree structure of the site to pages they have access to?",
   "admin.general.allowComments": "Allow Comments",
   "admin.general.allowCommentsHint": "Can users leave comments on pages? Can be restricted using Page Rules.",
   "admin.general.allowContributions": "Allow Contributions",
@@ -1697,6 +1699,8 @@
   "navEdit.noSelection": "Select a menu item from the left to start editing.",
   "navEdit.openInNewWindow": "Open in New Window",
   "navEdit.openInNewWindowHint": "Whether the link should open in a new window / tab.",
+  "navEdit.saveModeSuccess": "Navigation mode set successfully.",
+  "navEdit.saveSuccess": "Menu items saved successfully.",
   "navEdit.selectGroups": "Group(s):",
   "navEdit.separator": "Separator",
   "navEdit.target": "Target",
@@ -1711,6 +1715,8 @@
   "pageDeleteDialog.deleteSuccess": "Page deleted successfully.",
   "pageDeleteDialog.pageId": "Page ID {id}",
   "pageDeleteDialog.title": "Confirm Page Deletion",
+  "pageDuplicateDialog.title": "Duplicate and Save As...",
+  "pageRenameDialog.title": "Rename / Move to...",
   "pageSaveDialog.displayModePath": "Browse Using Paths",
   "pageSaveDialog.displayModeTitle": "Browse Using Titles",
   "pageSaveDialog.title": "Save As...",
