feat: admin auth UI + refs

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -67,28 +67,32 @@
   "admin.auth.activeStrategies": "Active Strategies",
   "admin.auth.addStrategy": "Add Strategy",
   "admin.auth.allowedWebOrigins": "Allowed Web Origins",
-  "admin.auth.autoEnrollGroups": "Assign to group",
-  "admin.auth.autoEnrollGroupsHint": "Automatically assign new users to these groups.",
+  "admin.auth.autoEnrollGroups": "Assign to group(s)",
+  "admin.auth.autoEnrollGroupsHint": "Automatically assign new users to these groups. New users are always added to the Users group regardless of this setting.",
   "admin.auth.callbackUrl": "Callback URL / Redirect URI",
   "admin.auth.configReference": "Configuration Reference",
   "admin.auth.configReferenceSubtitle": "Some strategies may require some configuration values to be set on your provider. These are provided for reference only and may not be needed by the current strategy.",
   "admin.auth.displayName": "Display Name",
   "admin.auth.displayNameHint": "The title shown to the end user for this authentication strategy.",
-  "admin.auth.domainsWhitelist": "Limit to specific email domains",
-  "admin.auth.domainsWhitelistHint": "A list of domains authorized to register. The user email address domain must match one of these to gain access.",
+  "admin.auth.domainsWhitelist": "Email Address Allowlist",
+  "admin.auth.domainsWhitelistHint": "Only allow users to register with an email address that matches the regex expression.",
   "admin.auth.enabled": "Enabled",
   "admin.auth.enabledForced": "This strategy cannot be disabled.",
   "admin.auth.enabledHint": "Should this strategy be available to sites for login.",
   "admin.auth.force2fa": "Force all users to use Two-Factor Authentication (2FA)",
   "admin.auth.force2faHint": "Users will be required to setup 2FA the first time they login and cannot be disabled by the user.",
   "admin.auth.globalAdvSettings": "Global Advanced Settings",
+  "admin.auth.info": "Info",
+  "admin.auth.infoName": "Name",
+  "admin.auth.infoNameHint": "Display name for this strategy.",
   "admin.auth.loginUrl": "Login URL",
   "admin.auth.logoutUrl": "Logout URL",
+  "admin.auth.noConfigOption": "This strategy has no configuration options you can modify.",
   "admin.auth.refreshSuccess": "List of strategies has been refreshed.",
   "admin.auth.registration": "Registration",
   "admin.auth.saveSuccess": "Authentication configuration saved successfully.",
   "admin.auth.security": "Security",
-  "admin.auth.selfRegistration": "Allow self-registration",
+  "admin.auth.selfRegistration": "Allow Self-Registration",
   "admin.auth.selfRegistrationHint": "Allow any user successfully authorized by the strategy to access the wiki.",
   "admin.auth.siteUrlNotSetup": "You must set a valid {siteUrl} first! Click on {general} in the left sidebar.",
   "admin.auth.status": "Status",
