feat: admin blocks page + lazy load blocks + block-index

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -109,6 +109,12 @@
   "admin.auth.title": "Authentication",
   "admin.auth.vendor": "Vendor",
   "admin.auth.vendorWebsite": "Website",
+  "admin.blocks.add": "Add Block",
+  "admin.blocks.builtin": "Built-in component",
+  "admin.blocks.custom": "Custom component",
+  "admin.blocks.isEnabled": "Enabled",
+  "admin.blocks.saveSuccess": "Blocks state saved successfully.",
+  "admin.blocks.subtitle": "Manage dynamic components available for use inside pages.",
   "admin.blocks.title": "Content Blocks",
   "admin.comments.provider": "Provider",
   "admin.comments.providerConfig": "Provider Configuration",
