feat: block-index feature complete + dark theme fixes

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -110,8 +110,8 @@
   "admin.auth.vendor": "Vendor",
   "admin.auth.vendorWebsite": "Website",
   "admin.blocks.add": "Add Block",
-  "admin.blocks.builtin": "Built-in component",
-  "admin.blocks.custom": "Custom component",
+  "admin.blocks.builtin": "Built-in",
+  "admin.blocks.custom": "Custom",
   "admin.blocks.isEnabled": "Enabled",
   "admin.blocks.saveSuccess": "Blocks state saved successfully.",
   "admin.blocks.subtitle": "Manage dynamic components available for use inside pages.",
