--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -1129,6 +1129,7 @@
   "auth.changePwd.newPasswordVerify": "Verify New Password",
   "auth.changePwd.proceed": "Change Password",
   "auth.changePwd.subtitle": "Choose a new password",
+  "auth.changePwd.success": "Password updated successfully.",
   "auth.enterCredentials": "Enter your credentials",
   "auth.errors.forgotPassword": "Missing or invalid email address.",
   "auth.errors.invalidEmail": "Email is invalid.",
@@ -1198,6 +1199,7 @@
   "auth.tfaSetupInstrSecond": "Enter the security code generated from your trusted device:",
   "auth.tfaSetupTitle": "Your administrator has required Two-Factor Authentication (2FA) to be enabled on your account.",
   "auth.tfaSetupVerifying": "Verifying...",
+  "auth.tfaSetupSuccess": "2FA enabled successfully on your account.",
   "common.actions.activate": "Activate",
   "common.actions.add": "Add",
   "common.actions.apply": "Apply",
