feat: turn off 2FA function + switch to pnpm + update dependencies

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -1131,6 +1131,7 @@
   "auth.changePwd.subtitle": "Choose a new password",
   "auth.changePwd.success": "Password updated successfully.",
   "auth.enterCredentials": "Enter your credentials",
+  "auth.errors.fields": "One or more fields are invalid.",
   "auth.errors.forgotPassword": "Missing or invalid email address.",
   "auth.errors.invalidEmail": "Email is invalid.",
   "auth.errors.invalidLogin": "Invalid Login",
@@ -1152,7 +1153,6 @@
   "auth.errors.tooManyAttempts": "Too many attempts!",
   "auth.errors.tooManyAttemptsMsg": "You've made too many failed attempts in a short period of time, please try again {time}.",
   "auth.errors.userNotFound": "User not found",
-  "auth.errors.fields": "One or more fields are invalid.",
   "auth.fields.email": "Email Address",
   "auth.fields.emailUser": "Email / Username",
   "auth.fields.name": "Name",
@@ -1748,6 +1748,9 @@
   "profile.auth": "Authentication",
   "profile.authChangePassword": "Change Password",
   "profile.authDisableTfa": "Turn Off 2FA",
+  "profile.authDisableTfaConfirm": "Are you sure you want to disable Two Factor Authentication?",
+  "profile.authDisableTfaFailed": "Failed to turn off 2FA.",
+  "profile.authDisableTfaSuccess": "2FA turned off successfully.",
   "profile.authInfo": "Your account is associated with the following authentication methods:",
   "profile.authLoadingFailed": "Failed to load authentication methods.",
   "profile.authModifyTfa": "Modify 2FA",
