feat: mail processing with vue email templates

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -232,6 +232,7 @@
   "admin.general.companyNameHint": "Name to use when displaying copyright notice in the footer. Leave empty to hide.",
   "admin.general.contentLicense": "Content License",
   "admin.general.contentLicenseHint": "License shown in the footer of all content pages.",
+  "admin.general.defaultBaseURLHint": "The default base URL to use when a site URL is not available. (e.g. https://wiki.example.com)",
   "admin.general.defaultDateFormat": "Default Date Format",
   "admin.general.defaultDateFormatHint": "The default date format for new users.",
   "admin.general.defaultTimeFormat": "Default Time Format",
@@ -423,6 +424,7 @@
   "admin.login.welcomeRedirect": "First-time Login Redirect",
   "admin.login.welcomeRedirectHint": "Optionally redirect the user to a specific page when he/she login for the first time. This can be overridden at the group level.",
   "admin.mail.configuration": "Configuration",
+  "admin.mail.defaultBaseURL": "Default Base URL",
   "admin.mail.dkim": "DKIM (optional)",
   "admin.mail.dkimDomainName": "Domain Name",
   "admin.mail.dkimDomainNameHint": "Domain name used for DKIM validation.",
@@ -454,6 +456,7 @@
   "admin.mail.smtpVerifySSL": "Verify SSL Certificate",
   "admin.mail.smtpVerifySSLHint": "Some hosts requires SSL certificate checking to be disabled. Leave enabled for proper security.",
   "admin.mail.subtitle": "Configure mail settings",
+  "admin.mail.templateEditor": "Mail Template Editor",
   "admin.mail.templateResetPwd": "Password Reset Email",
   "admin.mail.templateWelcome": "Welcome Email",
   "admin.mail.templates": "Mail Templates",
