feat: user welcome email

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -919,6 +919,7 @@
   "admin.users.create": "Create User",
   "admin.users.createInvalidData": "Cannot create user as some fields are invalid or missing.",
   "admin.users.createKeepOpened": "Keep dialog opened after create",
+  "admin.users.createSendEmailMissingSiteId": "You must specify the wiki site to reference for the welcome email.",
   "admin.users.createSuccess": "User created successfully!",
   "admin.users.createdAt": "Created on {date}",
   "admin.users.darkMode": "Dark Mode",
@@ -1001,6 +1002,7 @@
   "admin.users.selectGroup": "Select Group...",
   "admin.users.sendWelcomeEmail": "Send Welcome Email",
   "admin.users.sendWelcomeEmailAltHint": "An email will be sent to the user with link(s) to the wiki(s) the user has read access to.",
+  "admin.users.sendWelcomeEmailFromSiteId": "Site to use for the Welcome Email",
   "admin.users.sendWelcomeEmailHint": "An email will be sent to the user with his login details.",
   "admin.users.subtitle": "Manage Users",
   "admin.users.tfa": "Two Factor Authentication (2FA)",
