feat: metrics endpoint

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -466,6 +466,16 @@
   "admin.mail.testRecipientHint": "Email address that should receive the test email.",
   "admin.mail.testSend": "Send Email",
   "admin.mail.title": "Mail",
+  "admin.metrics.auth": "You must provide the {headerName} header with a {tokenType} token. Generate an API key with the {permission} permission and use it as the token.",
+  "admin.metrics.disabled": "Endpoint Disabled",
+  "admin.metrics.enabled": "Endpoint Enabled",
+  "admin.metrics.endpoint": "The metrics endpoint can be scraped at {endpoint}",
+  "admin.metrics.endpointWarning": "Note that this override any page at this path.",
+  "admin.metrics.refreshSuccess": "Metrics endpoint state has been refreshed.",
+  "admin.metrics.subtitle": "Manage the Prometheus metrics endpoint",
+  "admin.metrics.title": "Metrics",
+  "admin.metrics.toggleStateDisabledSuccess": "Metrics endpoint disabled successfully.",
+  "admin.metrics.toggleStateEnabledSuccess": "Metrics endpoint enabled successfully.",
   "admin.nav.modules": "Modules",
   "admin.nav.site": "Site",
   "admin.nav.system": "System",
