feat: asset rename + asset delete dialogs + linting fixes

--- a/server/locales/en.json
+++ b/server/locales/en.json
@@ -1643,6 +1643,13 @@
   "fileman.aiFileType": "Adobe Illustrator Document",
   "fileman.aifFileType": "AIF Audio File",
   "fileman.apkFileType": "Android Package",
+  "fileman.assetDelete": "Delete Asset",
+  "fileman.assetDeleteConfirm": "Are you sure you want to delete {name}?",
+  "fileman.assetDeleteId": "Asset ID {id}",
+  "fileman.assetDeleteSuccess": "Asset deleted successfully.",
+  "fileman.assetFileName": "Asset Name",
+  "fileman.assetFileNameHint": "Filename of the asset, including the file extension.",
+  "fileman.assetRename": "Rename Asset",
   "fileman.aviFileType": "AVI Video File",
   "fileman.binFileType": "Binary File",
   "fileman.bz2FileType": "BZIP2 Archive",
@@ -1698,6 +1705,8 @@
   "fileman.pptxFileType": "Microsoft Powerpoint Presentation",
   "fileman.psdFileType": "Adobe Photoshop Document",
   "fileman.rarFileType": "RAR Archive",
+  "fileman.renameAssetInvalid": "Asset name is invalid.",
+  "fileman.renameAssetSuccess": "Asset renamed successfully",
   "fileman.renameFolderInvalidData": "One or more fields are invalid.",
   "fileman.renameFolderSuccess": "Folder renamed successfully.",
   "fileman.searchFolder": "Search folder...",
